Fix the overflowing text issue
This commit fixes the overflowing that is caused by long text content
that from the user's data. I follow the way of the GitHub handles long
text content.

--- a/scss/components/_result.scss
+++ b/scss/components/_result.scss
@@ -145,13 +145,17 @@
   }
 }
 
+.result__details .result__item {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
 .result__details .result__item:not(:first-child) {
   margin-top: rem(16);
 }
 
 .result__link {
-  word-break: break-all;
-
   @include link-styling();
   @include focus-visible(var(--focus-visible-outline-color));
 }
